# Adafruit_IO_Python_CLI

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  LICENSE  README.md  pyproject.toml
adafruit_io_cli/: main.py
adafruit_io_cli/tests/: test_performance.py
